Update script source path in index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <canvas id="visualizer" width="560" height="200"></canvas>
         </div>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/main.js"></script>
 </body>
 </html> 
